--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,14 +5,32 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="19"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="15"
+        android:targetSdkVersion="19" />
+    
+    <permission android:name="br.com.locar.core.permission.MAPS_RECEIVE"
+	    android:protectionLevel="signature"></permission>
+    
+    <uses-permission android:name="br.com.locar.core.permission.MAPS_RECEIVE" />
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <meta-data android:name="com.google.android.gms.version"
+        	android:value="@integer/google_play_services_version" />
+        
+		<meta-data android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyALiT6r67JVSTgfXgNvvwWLYPykGy0oU4E" />
+		
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
@@ -22,11 +40,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
+        <activity
             android:name=".CadastrarNovoUsuario"
             android:label="Cadastre-se!" />
-        <activity 
-            android:name=".MainActivity" />
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name="br.com.locar.core.MapActivity"
+            android:label="@string/title_activity_map" >
+        </activity>
     </application>
 
 </manifest>
